# arbiter

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROCESS.md  PROGRESS.md  README.md  embed.go  go.mod
engine/: embed.go  pyproject.toml
engine/arbiter_engine/: __init__.py  __main__.py  errors.py
engine/arbiter_engine/config/: __init__.py
engine/arbiter_engine/facts/: __init__.py  descriptors.py  extract_cache.py  incremental.py  log.py  query.py  relocation.py  view.py
engine/arbiter_engine/gdbmcp/: __init__.py  audit.py  cli.py  config.py  diagnostics.py  errors.py  mi.py  server.py  sessions.py  tools.py
engine/arbiter_engine/log/: __init__.py
engine/tests/: .gitignore  import_policy.py  test_async_runs_facts_config.py  test_build_cache.py  test_build_cache_integration.py  test_census.py  test_compile_db.py  test_config.py  test_config_incremental.py  test_errors.py  test_extract_cache.py  test_facts_conformance.py  test_facts_conformance_corpus.py  test_facts_reconcile.py  test_facts_relocation.py  test_facts_store_foundation.py  test_gdbmcp_doctor.py  test_gdbmcp_mi.py  test_gdbmcp_server.py  test_gdbmcp_sessions.py  test_gdbmcp_stdio.py  test_gdbmcp_transcripts.py  test_gtest_adapter.py  test_guidance.py  test_incremental_gc.py  test_locks.py  test_log_handshake.py  test_perfmcp_analysis.py  test_perfmcp_cli.py  test_perfmcp_mcp.py  test_pipeline.py  test_recipes.py  test_rpc_chassis.py  test_run_state.py  test_run_tools.py  test_runner.py  test_runner_contention.py  test_runs_scan.py  test_runs_scan_ast.py  test_start_run.py  (+7 more)
(+498 files in other folders)
