[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter-engine"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
scan = []

[tool.setuptools.packages.find]
where = ["."]
include = ["arbiter_engine*"]
